[project]
name = "poetry-hw"
version = "0.1.0"
description = ""
authors = [
    {name = "Elena Ladyzhets",email = "eladyzhets@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "selene (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylist = "^1.4.0"

